<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SignupActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_margin="20dp"
        android:src="@drawable/contacts"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:padding="10dp"
        android:orientation="vertical">

        <EditText
            android:drawableStart="@drawable/baseline_person_24"
            android:id="@+id/edit_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/Username" />

        <EditText
            android:drawableStart="@drawable/baseline_lock_24"
            android:id="@+id/edit_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/Password"
            android:inputType="textPassword"/>

        <EditText
            android:drawableStart="@drawable/baseline_lock_24"
            android:id="@+id/edit_confirm_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"/>


        <Button
            android:id="@+id/button_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/SIGNUP"
            />

        <Button
            android:id="@+id/button_back_to_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/back_to_login"
            android:backgroundTint="@color/black" />


    </LinearLayout>

</RelativeLayout>